# research

./: .gitignore  README.md
async_rust/: Cargo.toml
async_rust/src/: dance_example.rs  main.rs
code_generation_rust/: Cargo.toml
code_generation_rust/attribute/: Cargo.toml  Notes.md
code_generation_rust/attribute/src/: lib.rs
code_generation_rust/greetings/: Cargo.toml  Notes.md
code_generation_rust/greetings/greetings_derive/: Cargo.toml
code_generation_rust/greetings/greetings_derive/src/: lib.rs
code_generation_rust/greetings/src/: lib.rs
code_generation_rust/lib/: Cargo.toml
code_generation_rust/lib/src/: macro_rules.rs
code_generation_rust/src/: main.rs
pytorch/: autograd.py  cifar_net.pth  classifier.py  neural_network.py  tensors.py
rust-plugins/: Cargo.toml  README.md
rust-plugins/app/: Cargo.toml
rust-plugins/app/src/: external_speakers.rs  main.rs  plugin_registrar.rs  speaker_proxy.rs
rust-plugins/core/: Cargo.toml
rust-plugins/core/src/: lib.rs  plugin_declaration.rs  registrar.rs  speaker.rs  versions.rs
rust-plugins/hello/: Cargo.toml
rust-plugins/hello/src/: lib.rs
