[package]
name = "code_generation_rust"
version = "0.1.0"
authors = ["Warhorst <46809804+Warhorst@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "lib" }
greetings = { path = "greetings" }
greetings_derive = { path = "greetings/greetings_derive" }
attribute = { path = "attribute" }

[workspace]
members = [
    "lib", "greetings", "greetings/greetings_derive", "attribute"
]